# getifs

./: .codecov.yml  .gitignore  BENCHMARK_QUICK_START.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md  build.rs
.github/: BENCHMARKS.md
.github/scripts/: parse-benchmarks.sh  run-benchmarks-local.sh
.github/workflows/: android.yml  benchmark.yml  bsd.yml  ci.yml  coverage.yml  loc.yml
benches/: bench.rs  gateway.rs  interfaces.rs  local_ip_address.rs  route.rs
ci/: sanitizer.sh
ci/android/: .gitignore  build.gradle.kts  settings.gradle.kts
ci/android/app/: build.gradle.kts
ci/android/app/src/androidTest/java/dev/getifs/androidharness/: NetlinkInstrumentedTest.java
ci/android/app/src/main/: AndroidManifest.xml
ci/android/app/src/main/java/dev/getifs/androidharness/: NativeBridge.java
ci/android/harness/: Cargo.toml
ci/android/harness/src/: lib.rs
docs/superpowers/plans/: 2026-05-26-android-support-netlink-autobind.md
docs/superpowers/specs/: 2026-05-26-android-support-netlink-autobind-design.md
examples/: addrs.rs  filter_by_rfc.rs  gateway.rs  interfaces.rs  local_ip_addrs.rs  multicast_addrs.rs  route.rs
src/: bsd.rs  bsd_like.rs  gateway.rs  idx_to_name.rs  ifaddr.rs  ifnet.rs  interfaces.rs  lib.rs  linux.rs  local_addrs.rs  local_ip_addrs.rs  macros.rs  mtu.rs  name_to_idx.rs  name_to_iface.rs  private_ip_addrs.rs  probe.rs  public_ip_addrs.rs  route.rs  rt_broadcast.rs  rt_gateway.rs  rt_global.rs  rt_host.rs  rt_local.rs  rt_multicast.rs  rt_net.rs  tests.rs  utils.rs  windows.rs
src/bsd_like/: compat.rs  gateway.rs  local_addr.rs  route.rs  rt_broadcast.rs  rt_generic.rs  rt_host.rs  rt_net.rs
src/linux/: android.rs  gateway.rs  local_addr.rs  netlink.rs  nl.rs
src/tests/: bsd.rs  linux.rs
src/windows/: gateway.rs  local_addr.rs  route.rs
tests/: filter_variants.rs  interfaces.rs
