[package]
name = "getifs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/getifs"
homepage = "https://github.com/al8n/getifs"
documentation = "https://docs.rs/getifs"
description = "Get network interfaces information (including MTU) in a fast way (say bye to `getifaddrs`)."
license = "MIT OR Apache-2.0"
rust-version = "1.84.0"

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false

[features]
default = []
serde = ["dep:serde", "ipnet/serde", "smallvec-wrapper/serde", "hardware-address/serde"]

[dependencies]
bitflags = "2"
either = "1"
hardware-address = "0.1"
iprobe = "0.1"
smol_str = "0.3"
smallvec-wrapper = "0.2"
ipnet = "2"

serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
either = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Networking_WinSock", "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"] }

[dev-dependencies]
criterion = "0.5"
network-interface = "0.1"
which = "7"
scopeguard = "1"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(all_tests)'] }
