[package]
name = "getifs"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/al8n/getifs"
homepage = "https://github.com/al8n/getifs"
documentation = "https://docs.rs/getifs"
description = "Cross-platform enumeration of network interfaces and their MTU, gateway, multicast, and local/private/public IP addresses."
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
keywords = ["getifaddrs", "network-interface", "local-ip-address", "gateway", "mtu"]
categories = ["network-programming"]
# The Android CI harness and local design docs are not part of the
# published crate.
exclude = ["/ci", "/docs"]

[[bench]]
path = "benches/interfaces.rs"
name = "interfaces"
harness = false

[[bench]]
path = "benches/local_ip_address.rs"
name = "local_ip_address"
harness = false

[[bench]]
path = "benches/gateway.rs"
name = "gateway"
harness = false

[[bench]]
path = "benches/route.rs"
name = "route"
harness = false

[features]
default = []
# serde = ["dep:serde", "ipnet/serde", "smallvec-wrapper/serde", "hardware-address/serde"]

[dependencies]
bitflags = "2"
cfg-if = "1"
hardware-address = "0.3"
iprobe = "0.1"
ipnet = "2"
iprfc = "0.2"
paste = "1"
smol_str = "0.3"
smallvec-wrapper = "0.4"
triomphe = "0.1"

# serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(all(not(windows), not(any(target_os = "android", target_os = "linux"))))'.dependencies]
libc = "0.2"

[target.'cfg(all(any(target_os = "android", target_os = "linux")))'.dependencies]
rustix = { version = "1.1", features = ["net", "param"] }
linux-raw-sys = { version = "0.12", features = ["if_arp", "net", "netlink"] }

[target.'cfg(all(any(target_os = "android", target_os = "linux")))'.dev-dependencies]
rustix = { version = "1.1", features = ["net", "param", "process"] }


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock", "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"] }
widestring = "1"

[dev-dependencies]
# `>=0.7, <0.9` instead of `^0.8` so the DragonFly CI's
# `cargo update -p criterion --precise 0.7.0` (driven by the
# pkg-shipped Rust 1.85.1, while criterion 0.8+ requires 1.86) can
# satisfy the constraint. Cargo still resolves to the latest
# matching version (0.8.x) for everyone else.
criterion = ">=0.7, <0.9"
network-interface = "2"
local-ip-address = "0.6"
which = "8"
scopeguard = "1"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(apple)',
  'cfg(bsd_like)',
  'cfg(freebsdlike)',
  'cfg(netbsdlike)',
  'cfg(linux_like)',
] }
